--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="js/main.ts"></script>
+  <script src="src/main.ts" type="module"></script>
 </body>
 
 </html>
